Improve import/export
